good_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: myapp
        image: nginx:1.21
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
