k8srequiredlabel_policy_pod.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-must-have-app
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - "*-system"
  parameters:
    labels: 
    - "app.kubernetes.io/name"
